--- a/tracks.yaml
+++ b/tracks.yaml
@@ -7,7 +7,9 @@ tracks:
       --replace
     - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
-      -i :{release_inc}
+      -i :{release_inc} --os-name ubuntu
+    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
+      -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: master
@@ -15,11 +17,11 @@ tracks:
     name: rospy_message_converter
     patches: null
     release_inc: '0'
-    release_repo_url: https://github.com/baalexander/rospy_message_converter-release.git
+    release_repo_url: https://github.com/uos-gbp/rospy_message_converter-release.git
     release_tag: :{version}
     ros_distro: indigo
     vcs_type: git
-    vcs_uri: https://github.com/baalexander/rospy_message_converter.git
+    vcs_uri: https://github.com/uos/rospy_message_converter.git
     version: :{auto}
   jade:
     actions:
