--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(rospy_message_converter)
 
-find_package(catkin REQUIRED COMPONENTS message_generation roslib rospy rostest std_msgs)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 
 # Generate messages for testing (NOINSTALL)
 add_message_files(
   FILES
   TestArray.msg
+  Uint8Array3TestMessage.msg
+  Uint8ArrayTestMessage.msg
   NOINSTALL
 )
 
@@ -20,5 +22,8 @@ generate_messages(
 
 catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
 
-# Test launch files
-add_rostest(test/test_all.test)
+# Testing
+if(CATKIN_ENABLE_TESTING)
+  catkin_add_nosetests(test/test_json_message_converter.py)
+  catkin_add_nosetests(test/test_message_converter.py)
+endif()
