--- a/Dockerfile-kinetic
+++ b/Dockerfile-kinetic
@@ -1,4 +1,4 @@
-FROM ros:jade-ros-core
+FROM ros:kinetic-ros-core
 
 RUN apt-get update && apt-get install -y \
     build-essential
@@ -8,8 +8,8 @@ COPY . /ws/src/rospy_message_converter
 WORKDIR /ws
 
 # Install the package and its dependencies
-RUN rosdep install --from-paths src --ignore-src --rosdistro jade -y
+RUN rosdep install --from-paths src --ignore-src --rosdistro kinetic -y
 
 # Set up the development environment
-RUN /bin/bash -c "source /opt/ros/jade/setup.bash && \
+RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash && \
     catkin_make install"
