--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.4.0-0": ["Sun Dec 27 2015", "Brandon Alexander", "baalexander@gmail.com"]}
+{"0.4.0-0": ["Sun Dec 27 2015", "Brandon Alexander", "baalexander@gmail.com"], "0.5.0-0": ["Thu Jan 17 2019", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
