--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d0505cc
+	base = 085c97e
 	trimbase = 
 	parent = release/lunar/rospy_message_converter
-	previous = 
+	previous = d0505cc
