--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4be930
+	base = f994032
 	trimbase = 
 	parent = debian/lunar/rospy_message_converter
-	previous = 
+	previous = e4be930
