--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad86d2b
+	base = 48af483
 	trimbase = 
 	parent = debian/lunar/rospy_message_converter
-	previous = 
+	previous = ad86d2b
