--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0be70f6
+	base = d7d395c
 	trimbase = 
 	parent = debian/melodic/rospy_message_converter
-	previous = 
+	previous = 0be70f6
