--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 517ca64
+	base = df84de8
 	trimbase = 
 	parent = debian/melodic/rospy_message_converter
-	previous = 
+	previous = 517ca64
