--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8f2689
+	base = 79b8a69
 	trimbase = 
 	parent = release/melodic/rospy_message_converter
-	previous = 
+	previous = f8f2689
