--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 714a92a
+	base = 53c3f57
 	trimbase = 
 	parent = rpm/melodic/rospy_message_converter
-	previous = 
+	previous = 714a92a
