--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4f02aa
+	base = c431f46
 	trimbase = 
 	parent = release/noetic/rospy_message_converter
-	previous = 
+	previous = e4f02aa
