--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd21c62
+	base = 39f6748
 	trimbase = 
 	parent = debian/noetic/rospy_message_converter
-	previous = 
+	previous = dd21c62
