--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35da355
+	base = ceae274
 	trimbase = 
 	parent = debian/noetic/rospy_message_converter
-	previous = 
+	previous = 35da355
