--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4182d9
+	base = 7dcd7dc
 	trimbase = 
 	parent = rpm/noetic/rospy_message_converter
-	previous = 
+	previous = c4182d9
