--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   matrix:
     - CI_ROS_DISTRO="kinetic"
     - CI_ROS_DISTRO="melodic"
+    - CI_ROS_DISTRO="noetic"
 
 install:
   - docker build -t rospy_message_converter_$CI_ROS_DISTRO -f Dockerfile-$CI_ROS_DISTRO .
