--- a/Dockerfile-noetic
+++ b/Dockerfile-noetic
@@ -1,7 +1,7 @@
-FROM ros:kinetic-ros-core
+FROM ros:noetic-ros-core
 
 RUN apt-get update \
-    && apt-get install -y build-essential python-rosdep cmake \
+    && apt-get install -y build-essential python3-rosdep cmake \
     && rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
 RUN rosdep init && rosdep update
@@ -11,8 +11,8 @@ COPY . /ws/src/rospy_message_converter
 WORKDIR /ws
 
 # Install the package and its dependencies
-RUN rosdep install --from-paths src --ignore-src --rosdistro kinetic -y
+RUN rosdep install --from-paths src --ignore-src --rosdistro noetic -y
 
 # Set up the development environment
-RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash && \
+RUN /bin/bash -c "source /opt/ros/noetic/setup.bash && \
     catkin_make install"
