--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>rospy_message_converter</name>
-  <version>0.5.3</version>
+  <version>0.5.4</version>
   <description>Converts between Python dictionaries and JSON to rospy messages.</description>
   <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
   <license>BSD</license>
@@ -15,11 +15,13 @@
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
 
-  <run_depend>roslib</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <exec_depend>roslib</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>rosunit</test_depend>
   <test_depend>std_srvs</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</test_depend>
 </package>
