--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.1-1": ["Mon May 25 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "0.5.2-1": ["Thu Jul 09 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "0.5.3-1": ["Thu Aug 20 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"0.5.4-1": ["Tue Oct 13 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "0.5.1-1": ["Mon May 25 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "0.5.2-1": ["Thu Jul 09 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "0.5.3-1": ["Thu Aug 20 2020", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
